test/Fail/Issue1951.err
Issue1951.agda:14.12-21: error: [NoParseForApplication]
Could not parse the application ƛ !_ ⟶ !_
Operators used in the grammar:
  ƛ_⟶ (prefix notation, level 20) [Id (Issue1951.agda:1.1-3)]
when scope checking ƛ !_ ⟶ !_
